[FEAT] check confined directory done. is_sub_directory()

--- a/homework2/Makefile
+++ b/homework2/Makefile
@@ -2,8 +2,13 @@ CC	= gcc
 CXX	= g++
 CFLAG	= -Wall -g -std=c++17
 EXE	= -o $@
+BOOST	= -I /usr/include -lboost_system-mt -lboost_filesystem-mt
 
 all: sandbox.so sandbox preload
+
+install: 
+	apt-get update
+	apt-get install libboost-filesystem1.62-dev
 
 sandbox.so: inject.cpp
 	$(CXX) $(EXE) -shared -fPIC $< -ldl
@@ -18,5 +23,5 @@ clean:
 	rm sandbox.so
 	rm sandbox
 	rmdir dirrr
-	rm link.txt
 	rm trash.txt
+	rm link.txt
