[FEAT] LD_PRELOAD should to explicitly specified in command line now.
But this is not what we want, we want only $ ./sandbox chmod
./helloworld.cpp 777
Without $ LD_PRELOAD=./sandbox.so ./sandbox chmod ./helloworld.cpp 777

--- a/homework2/Makefile
+++ b/homework2/Makefile
@@ -4,7 +4,7 @@ CFLAG	= -Wall -g -std=c++17
 EXE	= -o $@
 BOOST	= -I /usr/include -lboost_system-mt -lboost_filesystem-mt
 
-all: sandbox.so sandbox preload
+all: sandbox.so sandbox
 
 install: 
 	apt-get update
