--- a/homework2/Makefile
+++ b/homework2/Makefile
@@ -2,9 +2,13 @@ CC	= gcc
 CXX	= g++
 CFLAG	= -Wall -g -std=c++17
 EXE	= -o $@
-#BOOST	= -I /usr/include -lboost_system-mt -lboost_filesystem-mt
+BOOST	= -I /usr/include -lboost_system-mt -lboost_filesystem-mt
 
 all: sandbox.so sandbox
+
+install: 
+	apt-get update
+	apt-get install libboost-filesystem1.62-dev
 
 sandbox.so: inject.cpp
 	$(CXX) $(EXE) -shared -fPIC $< -ldl
@@ -16,10 +20,9 @@ preload:
 	LD_PRELOAD=./sandbox.so ./sandbox
 
 clean:
-	chmod 777 helloworld.cpp
+	chmod 000 helloworld.cpp
 	rm sandbox.so
 	rm sandbox
-	rm core.*
 	rmdir dirrr
 	rm trash.txt
 	rm link.txt
