[FEAT] I finally figure the problem out!!!
I add choice.cpp to call the function corresponding to cmd.
And then compile it as ./choice to be fed as argument to execve()
a.k.a.
char* args[] = {"chmod", "helloworld.cpp", "777", (char*)NULL};
char* envp[] = {LD_PRELOAD, BASE_PATH, PWD, HOME, NULL};
execve("./choice", args, envp); // <unistd.h>

args are hardcode now. The code still need to be modified.

--- a/homework2/Makefile
+++ b/homework2/Makefile
@@ -4,7 +4,7 @@ CFLAG	= -Wall -g -std=c++17
 EXE	= -o $@
 BOOST	= -I /usr/include -lboost_system-mt -lboost_filesystem-mt
 
-all: sandbox.so sandbox
+all: sandbox.so sandbox choice
 
 install: 
 	apt-get update
@@ -16,6 +16,9 @@ sandbox.so: inject.cpp
 sandbox: command_launcher.cpp
 	$(CXX) $(EXE) $(CFLAG) $< -ldl
 
+choice: choice.cpp
+	$(CXX) $(EXE) $(CFLAG) $< -ldl
+
 preload:
 	LD_PRELOAD=./sandbox.so ./sandbox
 
@@ -23,6 +26,7 @@ clean:
 	chmod 000 helloworld.cpp
 	rm sandbox.so
 	rm sandbox
+	rm choice
 	rmdir dirrr
 	rm trash.txt
 	rm link.txt
